Update Anna Bella Oficial.html

--- a/Anna Bella Oficial.html
+++ b/Anna Bella Oficial.html
@@ -11,7 +11,8 @@
       <img src="./Anna Bella Oficial_files/capa.png">
 
       <div id="menu">
-        <a href="file:///C:/Users/ok/Documents/Estudos/Udemy/Projeto%20aula/ProjetoAnnaBella/index.html">HOME</a> | <a href="file:///C:/Users/ok/Documents/Estudos/Udemy/Projeto%20aula/ProjetoAnnaBella/biografia.html">BIOGRAFIA</a> |
+        <a href="file:///C:/Users/ok/Documents/Estudos/Udemy/Projeto%20aula/ProjetoAnnaBella/index.html">HOME</a> | 
+        <a href="file:///C:/Users/ok/Documents/Estudos/Udemy/Projeto%20aula/ProjetoAnnaBella/biografia.html">BIOGRAFIA</a> |
         <a href="file:///C:/Users/ok/Documents/Estudos/Udemy/Projeto%20aula/ProjetoAnnaBella/campanhas-publicitarias.html">CAMPANHAS PUBLICITÁRIAS</a> |
         <a href="file:///C:/Users/ok/Documents/Estudos/Udemy/Projeto%20aula/ProjetoAnnaBella/contato.html">CONTATO</a>
       </div>
