--- a/campanhas-publicitarias.html
+++ b/campanhas-publicitarias.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="estilo.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>Anna Bella - Campanhas Publicitárias</title>
   </head>
   <body>
     <div id="principal">
-      <img src="./capa.png" />
+      <img class="img-capa" src="./capa.png" />
 
       <div id="menu">
         <a href="index.html">HOME</a> | 
@@ -19,7 +19,7 @@
 
       <div id="conteudo">
         <h1>Campanhas Publicitárias</h1>
-        <p>
+        <p class="paragrafo">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga,
           adipisci incidunt rerum, fugiat ut natus est placeat quo culpa dolor,
           delectus expedita in nostrum repellendus beatae quasi accusantium
@@ -28,7 +28,7 @@
 
         <img src="./foto1.png" class="img-campanha">
 
-        <p>
+        <p class="paragrafo">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
           explicabo placeat eius modi dolores! Facere eum ad ipsam modi saepe
           sed deleniti magnam aperiam. Eius assumenda delectus reprehenderit
@@ -37,7 +37,7 @@
 
         <img src="./foto2.png" class="img-campanha">
 
-        <p>
+        <p class="paragrafo">
           Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, iste
           sequi? Nemo dolores omnis fugit. In, reiciendis! Dicta eligendi
           quaerat odit eaque dolore quas, officiis neque voluptates veniam ad
@@ -46,7 +46,7 @@
 
         <img src="./foto3.png" class="img-campanha">
 
-        <p>
+        <p class="paragrafo">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, iste
             sequi? Nemo dolores omnis fugit. In, reiciendis! Dicta eligendi
             quaerat odit eaque dolore quas, officiis neque voluptates veniam ad
