--- a/contato.html
+++ b/contato.html
@@ -1,44 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="estilo.css" />
-    <title>Anna Bella - Contato</title>
-  </head>
-  <body>
-    <div id="principal">
-      <img src="./capa.png" />
 
-      <div id="menu">
-        <a href="index.html">HOME</a> | 
-        <a href="biografia.html">BIOGRAFIA</a> |
-        <a href="campanhas-publicitarias.html">CAMPANHAS PUBLICITÁRIAS</a> |
-        <a href="contato.html">CONTATO</a>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <script src="https://cdn.tailwindcss.com"></script>
+  <title>Anna Bella - Contato</title>
+</head>
+
+<body>
+  <div id="principal">
+    <img class="img-capa" src="./capa.png" />
+
+    <div id="menu">
+      <a href="index.html">HOME</a> |
+      <a href="biografia.html">BIOGRAFIA</a> |
+      <a href="campanhas-publicitarias.html">CAMPANHAS PUBLICITÁRIAS</a> |
+      <a href="contato.html">CONTATO</a>
+    </div>
+
+    <div id="conteudo">
+      <h1>Contato</h1>
+      <p class="paragrafo">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga,
+        adipisci incidunt rerum, fugiat ut natus est placeat quo culpa dolor,
+        delectus expedita in nostrum repellendus beatae quasi accusantium
+        similique numquam!
+      </p>
+
+      <img src="./foto1.png" class="img-campanha">
+
+      <div class="paragrafo">
+        <strong>e-mail:</strong> contato@jacksonsousa.com.br <br>
+        <strong>telefone:</strong> (11) 96114-9524
       </div>
 
-      <div id="conteudo">
-        <h1>Contato</h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga,
-          adipisci incidunt rerum, fugiat ut natus est placeat quo culpa dolor,
-          delectus expedita in nostrum repellendus beatae quasi accusantium
-          similique numquam!
+
+    </div><!--fim do conteúdo-->
+    <div id="rodape">
+      <div class="border-t border-gray-800 mt-12 pt-8 flex flex-col md:flex-row justify-between items-center">
+        <p class="text-gray-400 text-sm mb-4 md:mb-0">
+          © 2025 Jackson Sousa. Todos os direitos reservados.
         </p>
-
-        <img src="./foto1.png" class="img-campanha">
-
-        <div>
-          <strong>e-mail:</strong> contato@annabella.com.br <br>
-          <strong>telefone:</strong> (11) 96114-9524         
+        <div class="flex items-center space-x-4">
+          <a href="#" class="text-gray-400 hover:text-[#00ff9d] transition-colors text-sm">Política de Privacidade</a>
+          <span class="text-gray-600">•</span>
+          <a href="#" class="text-gray-400 hover:text-[#00ff9d] transition-colors text-sm">Termos de Uso</a>
         </div>
-
-        
-      </div><!--fim do conteúdo-->
-      <div id="rodape">
-            <h4>Todos os direitos reservados</h4>
-            <h5>por: Jackson Sousa</h5>
       </div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
