--- a/index.html
+++ b/index.html
@@ -1,48 +1,52 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="estilo.css" />
-    <title>Anna Bella Oficial</title>
-  </head>
-  <body>
-    <div id="principal">
-      <img src="./capa.png" />
 
-      <div id="menu">
-        <a href="index.html">HOME</a> | 
-        <a href="biografia.html">BIOGRAFIA</a> |
-        <a href="campanhas-publicitarias.html">CAMPANHAS PUBLICITÁRIAS</a> |
-        <a href="contato.html">CONTATO</a>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  
+  <title>Anna Bella Oficial</title>
+</head>
 
-      <div id="conteudo">
-        <h1>Sobre Anna Bella</h1>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga,
-          adipisci incidunt rerum, fugiat ut natus est placeat quo culpa dolor,
-          delectus expedita in nostrum repellendus beatae quasi accusantium
-          similique numquam!
-        </p>
+<body>
+  <div id="principal">
+    <img class="img-capa" src="./capa.png" />
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
-          explicabo placeat eius modi dolores! Facere eum ad ipsam modi saepe
-          sed deleniti magnam aperiam. Eius assumenda delectus reprehenderit
-          accusamus quod.
-        </p>
-        <p>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, iste
-          sequi? Nemo dolores omnis fugit. In, reiciendis! Dicta eligendi
-          quaerat odit eaque dolore quas, officiis neque voluptates veniam ad
-          hic.
-        </p>
-      </div>
-      <div id="rodape">
-            <h4>Todos os direitos reservados</h4>
-            <h5>por: Jackson Sousa</h5>
-      </div>
+    <div id="menu">
+      <a href="index.html">HOME</a> |
+      <a href="biografia.html">BIOGRAFIA</a> |
+      <a href="campanhas-publicitarias.html">CAMPANHAS PUBLICITÁRIAS</a> |
+      <a href="contato.html">CONTATO</a>
     </div>
-  </body>
+
+    <div id="conteudo">
+      <h1>Sobre Anna Bella</h1>
+      <p class="paragrafo">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fuga,
+        adipisci incidunt rerum, fugiat ut natus est placeat quo culpa dolor,
+        delectus expedita in nostrum repellendus beatae quasi accusantium
+        similique numquam!
+      </p>
+
+      <p class="paragrafo">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam
+        explicabo placeat eius modi dolores! Facere eum ad ipsam modi saepe
+        sed deleniti magnam aperiam. Eius assumenda delectus reprehenderit
+        accusamus quod.
+      </p>
+      <p class="paragrafo">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus, iste
+        sequi? Nemo dolores omnis fugit. In, reiciendis! Dicta eligendi
+        quaerat odit eaque dolore quas, officiis neque voluptates veniam ad
+        hic.
+      </p>
+    </div>
+    <div id="rodape">
+      <h4>Todos os direitos reservados</h4>
+      <h5>por: Jackson Sousa</h5>
+    </div>
+  </div>
+</body>
+
 </html>
